fix issues with collapse logic & add style (#13)
* fix issues with the collapse logic

* blobs collapse when routing to an artist page and expand when navigating home

* fix collapsed blobs sliding off the edge of the world

* resize collapsed blob area for mo better

* add names on rollover

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  min-height: 100vh;
 }
 
 .App-logo {
@@ -13,7 +14,7 @@
   }
 }
 
-.App-header {
+.App {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -21,6 +22,19 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+}
+
+.title {
+  color: #e3f994;
+  font-size: 17vw;
+  font-family: sans-serif; 
+  font-weight: 700;
+}
+.blobs {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
 }
 
 .App-link {
